# dwgSim

./: .gitmodules  CMakeLists.txt  notes.md  readme.md
data/splineTest5/: dat.csv  datAc.csv
demo/: drawDwgSimJson.py
src/: csvUtil.h  dwgsim.cpp  dwgsimDefs.h  dwgsimReader.cpp  dwgsimReader.h  dwgsimReader.hpp  lineDetect.h  splineUtil.h
test/: testLineDetect.cpp  testSplineConversion.cpp
